tests/lean/ctx_error_msgs.lean.expected.out
ctx_error_msgs.lean:6:0: error: infer type failed, function expected at
  <f.1.16.0> <a.1.16.1>
term
  <f.1.16.0>
has type
  ℕ
state:
f a : ℕ
⊢ true
ctx_error_msgs.lean:13:0: error: infer type failed, unknown variable
  <a.1.16.324>
state:
⊢ true
ctx_error_msgs.lean:20:0: error: infer type failed, incorrect number of universe levels
  eq
state:
a : ℕ
⊢ true
ctx_error_msgs.lean:25:0: error: infer type failed, incorrect number of universe levels
  eq.{0 0}
state:
a : ℕ
⊢ true
